# Kongdijqun

./: README.md  case1_simulation.sh  compile_CXY.sh  compile_all.sh  compile_detection.sh
Experiment/config/cxy_config/: px4_config_uav2.yaml  rviz_cxy_case2.rviz  rviz_cxy_case2_ugv.rviz
Experiment/config/rviz_config/: rviz_config_astar.rviz
Experiment/launch/: cxy_astar_ground.launch  cxy_astar_onboard.launch  cxy_case1_ground.launch  cxy_case1_onboard_uav1.launch  cxy_case1_onboard_uav2.launch  cxy_case1_onboard_uav3.launch  cxy_case2_ground.launch  cxy_case2_onboard_uav1.launch  cxy_control_ground.launch  cxy_control_onboard.launch
Experiment/px4_firmware/: firmware_for_cxy_0401.px4
Modules/common/msgs/: CMakeLists.txt
Modules/communication/src/: communication.cpp
Modules/ground_station/src/: ground_station_aruco.cpp
Modules/mission/: CMakeLists.txt
Modules/mission/formation_flight/: turtlebot_formation.cpp
Modules/mission/planning_mission/: pub_goal.cpp
Modules/planning/global_planning/: README.md
Modules/prometheus_case2/: CMakeLists.txt
Modules/prometheus_case2/include/: A_star.h  (+2 more)
Modules/prometheus_case3/: CMakeLists.txt  package.xml
Modules/swarm_communication/: CMakeLists.txt
Modules/swarm_communication/include/: communication.h  ground_station_bridge.h  swarm_formation_control.h
Modules/swarm_communication/src/: communication.cpp  ground_station_bridge.cpp  swarm_boardcast_bridge.cpp  swarm_end2end_bridge.cpp  swarm_multicast_bridge.cpp
Modules/swarm_control/: CMakeLists.txt
docs/: Case2程序说明.md  仿真环境配置.md  创新院项目飞行实验手册.md
(+153 files in other folders)
